--- a/scramble_sim_cpp/Makefile
+++ b/scramble_sim_cpp/Makefile
@@ -1,9 +1,6 @@
 ROOTFLAGS = $(shell root-config --cflags)
 ROOTLIBS  = $(shell root-config --libs)
-ROOTDIR = root_files
-ROOTMAC = root_macros
 FLAGS = -std=c++11
-SCRAMBLE = scramble_outputs
 
 all: scramble_sim root_transition_analysis root_longest_chain root_balance_analysis
 
@@ -20,16 +17,16 @@ root_balance_analysis: root_balance_analysis.cpp root_balance_analysis.h
 	g++ -o $@ root_balance_analysis.cpp $(ROOTFLAGS) $(ROOTLIBS)
 
 run_short: scramble_sim root_transition_analysis root_longest_chain root_balance_analysis
-	./scramble_sim desyncFilter.txt $(SCRAMBLE)Karol_scramble_output.txt $(SCRAMBLE)additive_scramble_output.txt $(SCRAMBLE)VeloPix_scramble_output.txt
-	./root_transition_analysis desyncFilter.txt $(SCRAMBLE)Karol_scramble_output.txt $(SCRAMBLE)additive_scramble_output.txt $(SCRAMBLE)VeloPix_scramble_output.txt $(ROOTDIR)transition_analysis_short.root
-	./root_longest_chain desyncFilter.txt $(SCRAMBLE)Karol_scramble_output.txt $(SCRAMBLE)additive_scramble_output.txt $(SCRAMBLE)VeloPix_scramble_output.txt $(ROOTDIR)longest_chain_short.root
-	./root_balance_analysis desyncFilter.txt $(SCRAMBLE)Karol_scramble_output.txt $(SCRAMBLE)additive_scramble_output.txt $(SCRAMBLE)VeloPix_scramble_output.txt $(ROOTDIR)balance_analysis_short.root
+	./scramble_sim desyncFilter.txt Karol_scramble_output.txt additive_scramble_output.txt VeloPix_scramble_output.txt
+	./root_transition_analysis desyncFilter.txt Karol_scramble_output.txt additive_scramble_output.txt VeloPix_scramble_output.txt transition_analysis_short.root
+	./root_longest_chain desyncFilter.txt Karol_scramble_output.txt additive_scramble_output.txt VeloPix_scramble_output.txt longest_chain_short.root
+	./root_balance_analysis desyncFilter.txt Karol_scramble_output.txt additive_scramble_output.txt VeloPix_scramble_output.txt balance_analysis_short.root
 
 run_full: scramble_sim root_transition_analysis root_longest_chain root_balance_analysis
-	./scramble_sim desync9X.txt $(SCRAMBLE)Karol_scramble_output.txt $(SCRAMBLE)additive_scramble_output.txt $(SCRAMBLE)VeloPix_scramble_output.txt
-	./root_transition_analysis desync9X.txt $(SCRAMBLE)Karol_scramble_output.txt $(SCRAMBLE)additive_scramble_output.txt $(SCRAMBLE)VeloPix_scramble_output.txt $(ROOTDIR)transition_analysis_full.root
-	./root_longest_chain desync9X.txt $(SCRAMBLE)Karol_scramble_output.txt $(SCRAMBLE)additive_scramble_output.txt $(SCRAMBLE)VeloPix_scramble_output.txt $(ROOTDIR)longest_chain_full.root
-	./root_balance_analysis desyncFilter.txt $(SCRAMBLE)Karol_scramble_output.txt $(SCRAMBLE)additive_scramble_output.txt $(SCRAMBLE)VeloPix_scramble_output.txt $(ROOTDIR)balance_analysis_full.root
+	./scramble_sim desync9X.txt  Karol_scramble_output.txt  additive_scramble_output.txt  VeloPix_scramble_output.txt
+	./root_transition_analysis desync9X.txt  Karol_scramble_output.txt  additive_scramble_output.txt  VeloPix_scramble_output.txt transition_analysis_full.root
+	./root_longest_chain desync9X.txt  Karol_scramble_output.txt  additive_scramble_output.txt  VeloPix_scramble_output.txt longest_chain_full.root
+	./root_balance_analysis desyncFilter.txt  Karol_scramble_output.txt  additive_scramble_output.txt VeloPix_scramble_output.txt balance_analysis_full.root
 
 clean:
 	rm -f scramble_sim
