--- a/scramble_sim_cpp/Makefile
+++ b/scramble_sim_cpp/Makefile
@@ -14,19 +14,19 @@ root_longest_chain: root_longest_chain.cpp root_longest_chain.h
 	g++ -o $@ root_longest_chain.cpp $(ROOTFLAGS) $(ROOTLIBS) $(FLAGS)
 
 root_balance_analysis: root_balance_analysis.cpp root_balance_analysis.h
-	g++ -o $@ root_balance_analysis.cpp $(ROOTFLAGS) $(ROOTLIBS) %(FLAGS)
+	g++ -o $@ root_balance_analysis.cpp $(ROOTFLAGS) $(ROOTLIBS) $(FLAGS)
 
 run_short: scramble_sim root_transition_analysis root_longest_chain root_balance_analysis
-	./scramble_sim desyncFilter.txt Karol_scramble_output.txt additive_scramble_output.txt VeloPix_scramble_output.txt
+	./scramble_sim             desyncFilter.txt Karol_scramble_output.txt additive_scramble_output.txt VeloPix_scramble_output.txt
 	./root_transition_analysis desyncFilter.txt Karol_scramble_output.txt additive_scramble_output.txt VeloPix_scramble_output.txt transition_analysis_short.root
-	./root_longest_chain desyncFilter.txt Karol_scramble_output.txt additive_scramble_output.txt VeloPix_scramble_output.txt longest_chain_short.root
-	./root_balance_analysis desyncFilter.txt Karol_scramble_output.txt additive_scramble_output.txt VeloPix_scramble_output.txt balance_analysis_short.root
+	./root_longest_chain       desyncFilter.txt Karol_scramble_output.txt additive_scramble_output.txt VeloPix_scramble_output.txt longest_chain_short.root
+	./root_balance_analysis    desyncFilter.txt Karol_scramble_output.txt additive_scramble_output.txt VeloPix_scramble_output.txt balance_analysis_short.root
 
 run_full: scramble_sim root_transition_analysis root_longest_chain root_balance_analysis
-	./scramble_sim desync9X.txt  Karol_scramble_output.txt  additive_scramble_output.txt  VeloPix_scramble_output.txt
-	./root_transition_analysis desync9X.txt  Karol_scramble_output.txt  additive_scramble_output.txt  VeloPix_scramble_output.txt transition_analysis_full.root
-	./root_longest_chain desync9X.txt  Karol_scramble_output.txt  additive_scramble_output.txt  VeloPix_scramble_output.txt longest_chain_full.root
-	./root_balance_analysis desyncFilter.txt  Karol_scramble_output.txt  additive_scramble_output.txt VeloPix_scramble_output.txt balance_analysis_full.root
+	./scramble_sim             desync9X.txt Karol_scramble_output.txt additive_scramble_output.txt VeloPix_scramble_output.txt
+	./root_transition_analysis desync9X.txt Karol_scramble_output.txt additive_scramble_output.txt VeloPix_scramble_output.txt transition_analysis_full.root
+	./root_longest_chain       desync9X.txt Karol_scramble_output.txt additive_scramble_output.txt VeloPix_scramble_output.txt longest_chain_full.root
+	./root_balance_analysis    desync9X.txt Karol_scramble_output.txt additive_scramble_output.txt VeloPix_scramble_output.txt balance_analysis_full.root
 
 clean:
 	rm -f scramble_sim
