Cleaned a bit the velo_scrambler.vhd and velo_scrambler_top.vhd files

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# Ignore everything ...
-*.*
-*
-
 #... but the next files:
 !.gitignore
 !desync9X.txt
@@ -22,3 +18,12 @@
 !*.h
 !make*
 !Make*
+
+*.txt
+*~
+*.bak
+*.mpf
+*.mti
+_*
+
+transcript
