random data added

--- a/scramble_sim_cpp/Makefile
+++ b/scramble_sim_cpp/Makefile
@@ -25,13 +25,13 @@ run_short: scramble_sim root_transition_analysis root_longest_chain root_balance
 run_9X: scramble_sim root_transition_analysis root_longest_chain root_balance_analysis
 	./scramble_sim             desync9X.txt Karol_scramble_output.txt additive_scramble_output.txt VeloPix_scramble_output.txt
 	./root_transition_analysis desync9X.txt Karol_scramble_output.txt additive_scramble_output.txt VeloPix_scramble_output.txt random_data_output.txt transition_analysis_full.root
-	./root_longest_chain       desync9X.txt Karol_scramble_output.txt additive_scramble_output.txt VeloPix_scramble_output.txt random_data_output.txt 1_longest_chain_full.root
+	./root_longest_chain       desync9X.txt Karol_scramble_output.txt additive_scramble_output.txt VeloPix_scramble_output.txt random_data_output.txt longest_chain_full.root
 	./root_balance_analysis    desync9X.txt Karol_scramble_output.txt additive_scramble_output.txt VeloPix_scramble_output.txt random_data_output.txt balance_analysis_full.root
 
 run_X: scramble_sim root_transition_analysis root_longest_chain root_balance_analysis
 	./scramble_sim             desyncX.txt Karol_scramble_output_x.txt additive_scramble_output_x.txt VeloPix_scramble_output_x.txt
 	./root_transition_analysis desyncX.txt Karol_scramble_output_x.txt additive_scramble_output_x.txt VeloPix_scramble_output_x.txt random_data_output_x.txt transition_analysis_X.root
-	./root_longest_chain       desyncX.txt Karol_scramble_output_x.txt additive_scramble_output_x.txt VeloPix_scramble_output_x.txt random_data_output_x.txt 1_longest_chain_X.root
+	./root_longest_chain       desyncX.txt Karol_scramble_output_x.txt additive_scramble_output_x.txt VeloPix_scramble_output_x.txt random_data_output_x.txt longest_chain_X.root
 	./root_balance_analysis    desyncX.txt Karol_scramble_output_x.txt additive_scramble_output_x.txt VeloPix_scramble_output_x.txt random_data_output_x.txt balance_analysis_X.root
 
 clean:
